# kaffeinesc

./: ChangeLog  Doxyfile  Makefile.in  README  TODO  acinclude.m4  ca.c  ccam-share-filter  config.h  config.status  configure  configure.in  gbox-share-info  kaffeine-sc-finetune  libtool
admin/: acinclude.m4.in
src/: Makefile.am  Makefile.in  cardclient.cpp  cardclient.h  dvbscam.cpp  dvbscam.h  dvbsection.cpp  dvbsection.h  emm.cpp  emm.h  kaffeinedvbsc.desktop  kaffeinesc.cpp  kaffeinesc.h  scconfigdialogui.ui  tpsau.cpp  tpsau.h
src/FFdecsa/: FFdecsa.c  FFdecsa.h  FFdecsa_test.c  Makefile  parallel_032_int.h  parallel_064_long.h  parallel_064_mmx.h  parallel_128_2mmx.h  parallel_128_sse.h  stream.c
src/FFdecsa/docs/: how_to_compile.txt
src/mgcam/: Makefile.am  Makefile.in  README  crypto.cpp  crypto.h  cryptoworks.cpp  cryptoworks.h  irdeto.c  mgcam.h  misc.cpp  misc.h  nagra.cpp  nagra.h  openssl-compat.h  st20.cpp  st20.h  viaccess.cpp  viaccess.h
src/mgcam/support/: aes.h
